--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -64,3 +64,14 @@
     width: 20%;
     align-self: center;
 }
+
+.estiloDivCarritoVacio{
+    background-color:rgba(77, 74, 74, 0.726);
+    color: rgb(216, 209, 209);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    margin: 0px 5%;
+}
