--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -38,6 +38,8 @@
     justify-content: center;
     background-image: url(https://i.ibb.co/Ltcj5Br/4621939-min.jpg);
     background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
     height: 100vh;
 }
 .colorThead{
