Logica terminada. Faltarian detalles esteticos

--- a/src/components/FormularioRegistro/formularioRegistro.css
+++ b/src/components/FormularioRegistro/formularioRegistro.css
@@ -4,7 +4,8 @@
     background-attachment: fixed;
     background-position: center;
     padding: 5% 0px;
-    height: 100vh;
+    height: auto;
+    min-height: 100vh;
 }
 
 .tituloFormulario{
