--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -97,3 +97,11 @@
     flex-direction: column;
     justify-content: center;
 }
+
+.estilosAlerta {
+    margin: 2% 10%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
