--- a/src/components/LoginWidget/loginWidget.css
+++ b/src/components/LoginWidget/loginWidget.css
@@ -55,3 +55,30 @@
     margin: 0px;
     cursor: default;
 }
+
+.divErrorLogIn {
+    background-color: #5f2329;
+    display: flex; 
+    flex-direction: row; 
+    justify-content: center;
+    align-items: center;
+    padding: 0px 5px;
+}
+
+.divErrorLogInP {
+    color: white; 
+    margin: 5px;
+}
+
+.logInTexto {
+    color: white; 
+    margin: 0px;
+    display: flex;
+    flex-direction: row;
+    Justify-content: center;
+    align-items: center;
+}
+
+.fondoAmarillo{
+    color: yellow;
+}
